mise à jour des codes

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="contact-content">
                 <h2>Get In Touch</h2>
                 <p>Let's discuss on something <span style="color: #34d399; font-weight: bold;">cool</span> together</p>
-                <p>I'm interested in freelance opportunities – especially ambitious or large projects. However, if you have other requests or questions, don't hesitate to contact me using the form.</p>
+                <p>I'm interested in freelance opportunities especially ambitious or large projects. However, if you have other requests or questions, don't hesitate to contact me using the form.</p>
             </div>
             <div class="contact-form">
                 <div>
